# oz_class

./: 1_data_analysis.ipynb  240116_특정문자탐색.js  240116_홀수보내버려.js  2_oz_machine_learning.ipynb  4일차_파이썬14_16화_윤인아.ipynb  5일차_파이썬17_20화_윤인아.ipynb  Chapter01_기초과제_윤인아.ipynb  Chapter01_기초과제_윤인아_1228.ipynb  Chapter09~13_기초과제_윤인아.ipynb  JS 복습 과제_가입 정보 띄우기.html  Mini_Project_윤인아.ipynb  Sakila.sql  hamburger.css  if문 사용하여 예시값 화면 만들기.html  monster.html  profile.css  profile.html  theme..md  theme.md  yes24.sql  나이 비교하기.js  박스로 간단하게 꾸미기.html  반응형 페이지 만들기.html  별트리만들기.html  짝수 더하며 계단 오르기.js  태그 사용해보기.html  프로필 페이지 만들기.html  회원가입 양식.html  과제.html  설문조사 양식 만들기.html  소개화면.css  소개화면.html  챌린지1.js  챌린지2.js  햄버거바 만들기.html
AWS/: 10. CloudFront.md  10_CloudFront.md  11_Route 53.md  12_IAM.md  13_AWS SDK, CLI (공유 자격 증명 설정).md  1_클라우드, AWS.md  2_EC2.md  3_Elastic IP.md  4_EBS.md  5_ELB.md  6_Auto Scaling.md  7_RDS.md  8_S3 (기본).md  9_S3 (정적 웹사이트 호스팅).md
HTMLCSS/: chat.css  chat.html
Part 01./: app.py
Part 03./: db.yaml
admin/: index.html
blog_practice/: app.py  db.yaml  posts_routes.py
carousel/: carousel.css  carousel.html
melone_m/: melon_m_.py  readme.md
oz-django-backend/: db.sqlite3  pyproject.toml
oz-django-backend/config/: settings.py  urls.py
oz-django-backend/feeds/: urls.py
웹 스크래핑 미니 프로젝트/: kream_ina.py  readme.md
회원가입 폼 만들기/: join.css  join.html  join.js
더덕마켓/: banner.css  footer.css  header.css  (+3 more)
(+7 files in other folders)
