[tool.poetry]
name = "oz-django-backend"
version = "0.1.0"
description = "python django project"
authors = ["Ina-Youn <yia0816@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
